@@ -424,13 +424,13 @@ BEGIN
     RTEXT           "100%",IDC_STATIC_BALANCE,120,20,24,8
 END
 
-IDD_DIALOG_SEEK DIALOGEX 0, 0, 180, 148
+IDD_DIALOG_SEEK DIALOGEX 0, 0, 348, 148
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Seek"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,120,124,50,14
-    CONTROL         "",IDC_TITLEBAR,"Static",SS_OWNERDRAW,0,0,180,20
+    CONTROL         "",IDC_TITLEBAR,"Static",SS_OWNERDRAW,0,0,348,20
     CONTROL         "Time",IDC_RADIO_TIME,"Button",BS_AUTORADIOBUTTON,6,79,31,10
     CONTROL         "Frame",IDC_RADIO_FRAME,"Button",BS_AUTORADIOBUTTON,6,97,36,10
     LTEXT           "Total duration: ",IDC_STATIC,6,30,50,8
@@ -442,6 +442,8 @@ BEGIN
     EDITTEXT        IDC_EDIT_TIME,60,78,108,14,ES_AUTOHSCROLL
     CONTROL         "Seek to keyframe",IDC_CHECK_KEYFRAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,126,72,10
     EDITTEXT        IDC_EDIT_FRAME,60,97,108,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDVERT,180,24,1,120
+    LISTBOX         IDC_LIST_CAPS,186,24,156,120,LBS_OWNERDRAWFIXED | LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_DIALOG_SCHEDULE DIALOGEX 0, 0, 246, 137
@@ -661,7 +663,7 @@ BEGIN
     IDD_DIALOG_SEEK, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 173
+        RIGHTMARGIN, 341
         TOPMARGIN, 7
         BOTTOMMARGIN, 141
     END
