@@ -6,6 +6,7 @@
 + added "Locate" button to find filter DLL files quickly
 + added "Unregister" feature to remove filters. (works also for missing DLLs)
 + added merit changing functionality
++ seeking form now displays current seeking capabilities and supported time formats
 
 [0.2.7.0 - Beta	   24/July/2008]
 + added support for Enhanced Video Renderer
